--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -1,5 +1,8 @@
 - file: index
 
-- part: NumPy
+- part: Basics
   chapters:
   - file: notebooks/00-Introduction to NumPy
+  - file: notebooks/01-Array Creation Function
+  - file: notebooks/03-Array Operations
+  - file: 04-Vectors and Matrices   
