--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -2,7 +2,8 @@
 
 - part: Basics
   chapters:
+  - file: notebooks/intro 
   - file: notebooks/00-Introduction to NumPy
   - file: notebooks/01-Array Creation Function
   - file: notebooks/03-Array Operations
-  - file: notebooks/04-Vectors and Matrices   
+  - file: notebooks/04-Vectors and Matrices
